# network-automation

./: .ansible-lint  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  Dockerfile  Makefile  README.md  ansible.cfg  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  requirements.yml
.github/workflows/: cd-deploy.yml  ci-validate.yml
bots/: __init__.py
bots/backup_bot/: __init__.py  backup_bot.py
bots/compliance_bot/: __init__.py  compliance_bot.py
bots/firewall_bot/: __init__.py  firewall_bot.py
bots/framework/: __init__.py  base_bot.py  chatops.py
bots/health_bot/: __init__.py  health_bot.py
bots/port_bot/: __init__.py  port_bot.py
bots/rollback_bot/: __init__.py  rollback_bot.py
bots/vlan_bot/: __init__.py  vlan_bot.py
examples/: device_compliance_input.json
group_vars/: access_switches.yml  all.yml  core_routers.yml  distribution_switches.yml  firewalls.yml
host_vars/: core-rtr-01-us-east.yml
inventories/dr/: hosts.yml
inventories/lab/: hosts.yml
inventories/production/: hosts.yml
inventories/staging/: hosts.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: network_health.json
monitoring/prometheus/: prometheus.yml
packer/: network-automation-vm.pkr.hcl
playbooks/: backup.yml  bgp.yml  compliance_scan.yml  health_check.yml  hostname.yml  initial_provisioning.yml  vlan.yml
policies/opa/: firewall_rules.rego  network_compliance.rego  network_compliance_test.rego
python/: __init__.py
python/backup/: __init__.py  backup_manager.py
python/compliance/: __init__.py  compliance_engine.py
python/config_gen/: __init__.py  config_generator.py
python/inventory/: __init__.py  inventory_manager.py
python/ssh/: __init__.py  ssh_client.py
schemas/: __init__.py  group_vars.json  host_vars.json  inventory.json
scripts/: generate_configs.sh  run_compliance_scan.sh  validate_inventory.sh
templates/arista_eos/: base_config.j2
templates/cisco_ios/: base_config.j2
templates/cisco_nxos/: base_config.j2
templates/fortinet/: base_config.j2
templates/juniper_srx/: base_config.j2
templates/paloalto/: base_config.j2
terraform/aws/: main.tf  outputs.tf  variables.tf
terraform/azure/: main.tf  outputs.tf  variables.tf
terraform/gcp/: main.tf  outputs.tf  variables.tf
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_compliance_engine.py  test_config_generator.py  test_inventory_manager.py
(+228 files in other folders)
